--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-## User Defined
-drafts/
-process/
+## jekyll & ruby
+_site/
+.jekyll-cache
+.jekyll-metadata
+Gemfile.lock
 
 ## Common Rules
 *.com
