--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,10 @@
-theme: jekyll-theme-minimal
+
 title: 文字游戏 by tzdxyz
-description: Bookmark this to keep an eye on my project updates!
+author: tzdxyz
+description: Welcome! The content in this site is licensed under CC BY 4.0 
+show_excerpts: true
+theme: minima
+
+kramdown:
+  hard_wrap: true
+
